Fix extra scrollbar when popup menu, close #12152

--- a/components/menu/style/index.less
+++ b/components/menu/style/index.less
@@ -188,8 +188,8 @@
       &:before {
         position: absolute;
         top: -7px;
-        left: -6px;
-        right: -6px;
+        left: 0;
+        right: 0;
         bottom: 0;
         content: ' ';
         opacity: .0001;
